#--------------------------------------------------------------------
# Inviwo Core
ivw_project(inviwo-core)

#--------------------------------------------------------------------
# Add header files
set(HEADER_FILES
    ${IVW_INCLUDE_DIR}/inviwo/core/common/inviwo.h
    ${IVW_INCLUDE_DIR}/inviwo/core/common/inviwoapplication.h
    ${IVW_INCLUDE_DIR}/inviwo/core/common/inviwocore.h
    ${IVW_INCLUDE_DIR}/inviwo/core/common/inviwocoredefine.h
    ${IVW_INCLUDE_DIR}/inviwo/core/common/inviwomodule.h
    ${IVW_INCLUDE_DIR}/inviwo/core/datastructures/data.h
    ${IVW_INCLUDE_DIR}/inviwo/core/datastructures/dataoperation.h
    ${IVW_INCLUDE_DIR}/inviwo/core/datastructures/datarepresentation.h
    ${IVW_INCLUDE_DIR}/inviwo/core/datastructures/datatypeclassification.h
    ${IVW_INCLUDE_DIR}/inviwo/core/datastructures/diskrepresentation.h
    ${IVW_INCLUDE_DIR}/inviwo/core/datastructures/geometry/attributes.h
    ${IVW_INCLUDE_DIR}/inviwo/core/datastructures/geometry/basemeshcreator.h
    ${IVW_INCLUDE_DIR}/inviwo/core/datastructures/geometry/geometry.h
    ${IVW_INCLUDE_DIR}/inviwo/core/datastructures/geometry/geometryram.h
    ${IVW_INCLUDE_DIR}/inviwo/core/datastructures/geometry/geometryrepresentation.h
    ${IVW_INCLUDE_DIR}/inviwo/core/datastructures/geometry/meshram.h
    ${IVW_INCLUDE_DIR}/inviwo/core/datastructures/geometry/trianglemeshram.h
    ${IVW_INCLUDE_DIR}/inviwo/core/datastructures/image/image.h
    ${IVW_INCLUDE_DIR}/inviwo/core/datastructures/image/imagedisk.h
    ${IVW_INCLUDE_DIR}/inviwo/core/datastructures/image/imageram.h
    ${IVW_INCLUDE_DIR}/inviwo/core/datastructures/image/imageramconverter.h
    ${IVW_INCLUDE_DIR}/inviwo/core/datastructures/image/imagerepresentation.h 
    ${IVW_INCLUDE_DIR}/inviwo/core/datastructures/representationconverter.h
    ${IVW_INCLUDE_DIR}/inviwo/core/datastructures/representationconverterfactory.h
    ${IVW_INCLUDE_DIR}/inviwo/core/datastructures/transferfunction.h
    ${IVW_INCLUDE_DIR}/inviwo/core/datastructures/transferfunctiondatapoint.h
    ${IVW_INCLUDE_DIR}/inviwo/core/datastructures/volume/volume.h
    ${IVW_INCLUDE_DIR}/inviwo/core/datastructures/volume/volumedisk.h
    ${IVW_INCLUDE_DIR}/inviwo/core/datastructures/volume/volumeoperation.h
    ${IVW_INCLUDE_DIR}/inviwo/core/datastructures/volume/volumeram.h
    ${IVW_INCLUDE_DIR}/inviwo/core/datastructures/volume/volumeramoperation.h
    ${IVW_INCLUDE_DIR}/inviwo/core/datastructures/volume/volumeramoperationexecuter.h
    ${IVW_INCLUDE_DIR}/inviwo/core/datastructures/volume/volumeramprecision.h
    ${IVW_INCLUDE_DIR}/inviwo/core/datastructures/volume/volumeramsubset.h
    ${IVW_INCLUDE_DIR}/inviwo/core/datastructures/volume/volumerepresentation.h
    ${IVW_INCLUDE_DIR}/inviwo/core/datastructures/volume/volumeramconverter.h
    ${IVW_INCLUDE_DIR}/inviwo/core/datastructures/volume/volumetypeclassification.h
    ${IVW_INCLUDE_DIR}/inviwo/core/interaction/action.h
    ${IVW_INCLUDE_DIR}/inviwo/core/interaction/interactionhandler.h
    ${IVW_INCLUDE_DIR}/inviwo/core/interaction/trackball.h
    ${IVW_INCLUDE_DIR}/inviwo/core/interaction/trackballaction.h
    ${IVW_INCLUDE_DIR}/inviwo/core/interaction/events/event.h
    ${IVW_INCLUDE_DIR}/inviwo/core/interaction/events/eventhandler.h
    ${IVW_INCLUDE_DIR}/inviwo/core/interaction/events/eventlistener.h
    ${IVW_INCLUDE_DIR}/inviwo/core/interaction/events/keyboardevent.h
    ${IVW_INCLUDE_DIR}/inviwo/core/interaction/events/mouseevent.h
    ${IVW_INCLUDE_DIR}/inviwo/core/interaction/events/timerevent.h
    ${IVW_INCLUDE_DIR}/inviwo/core/interaction/events/resizeevent.h
    ${IVW_INCLUDE_DIR}/inviwo/core/network/portconnection.h
    ${IVW_INCLUDE_DIR}/inviwo/core/network/processorlink.h
    ${IVW_INCLUDE_DIR}/inviwo/core/network/processornetwork.h
    ${IVW_INCLUDE_DIR}/inviwo/core/network/processornetworkevaluator.h
    ${IVW_INCLUDE_DIR}/inviwo/core/metadata/compositemetadata.h	
    ${IVW_INCLUDE_DIR}/inviwo/core/metadata/metadata.h
    ${IVW_INCLUDE_DIR}/inviwo/core/metadata/metadatafactory.h
    ${IVW_INCLUDE_DIR}/inviwo/core/metadata/metadatamap.h
    ${IVW_INCLUDE_DIR}/inviwo/core/metadata/positionmetadata.h
    ${IVW_INCLUDE_DIR}/inviwo/core/metadata/processormetadata.h
    ${IVW_INCLUDE_DIR}/inviwo/core/metadata/processorwidgetmetadata.h
    ${IVW_INCLUDE_DIR}/inviwo/core/ports/datainport.h
    ${IVW_INCLUDE_DIR}/inviwo/core/ports/dataoutport.h
    ${IVW_INCLUDE_DIR}/inviwo/core/ports/geometryport.h
    ${IVW_INCLUDE_DIR}/inviwo/core/ports/imageport.h
    ${IVW_INCLUDE_DIR}/inviwo/core/ports/inport.h
    ${IVW_INCLUDE_DIR}/inviwo/core/ports/outport.h
    ${IVW_INCLUDE_DIR}/inviwo/core/ports/port.h
    ${IVW_INCLUDE_DIR}/inviwo/core/ports/volumeport.h
    ${IVW_INCLUDE_DIR}/inviwo/core/processors/canvasprocessor.h
    ${IVW_INCLUDE_DIR}/inviwo/core/processors/processor.h
    ${IVW_INCLUDE_DIR}/inviwo/core/processors/processorfactory.h
    ${IVW_INCLUDE_DIR}/inviwo/core/processors/processorfactoryobject.h
    ${IVW_INCLUDE_DIR}/inviwo/core/processors/processorwidget.h
    ${IVW_INCLUDE_DIR}/inviwo/core/processors/processorwidgetfactory.h
    ${IVW_INCLUDE_DIR}/inviwo/core/processors/datasource/datasourceprocessor.h
    ${IVW_INCLUDE_DIR}/inviwo/core/processors/datasource/volumeexport.h
    ${IVW_INCLUDE_DIR}/inviwo/core/processors/datasource/volumesource.h
    ${IVW_INCLUDE_DIR}/inviwo/core/properties/baseoptionproperty.h
    ${IVW_INCLUDE_DIR}/inviwo/core/properties/boolproperty.h
    ${IVW_INCLUDE_DIR}/inviwo/core/properties/buttonproperty.h
    ${IVW_INCLUDE_DIR}/inviwo/core/properties/cameraproperty.h
    ${IVW_INCLUDE_DIR}/inviwo/core/properties/compositeproperty.h
    ${IVW_INCLUDE_DIR}/inviwo/core/properties/eventproperty.h
    ${IVW_INCLUDE_DIR}/inviwo/core/properties/fileproperty.h
    ${IVW_INCLUDE_DIR}/inviwo/core/properties/matrixproperties.h
    ${IVW_INCLUDE_DIR}/inviwo/core/properties/optionproperties.h
    ${IVW_INCLUDE_DIR}/inviwo/core/properties/ordinalproperty.h
    ${IVW_INCLUDE_DIR}/inviwo/core/properties/properties.h
    ${IVW_INCLUDE_DIR}/inviwo/core/properties/property.h
    ${IVW_INCLUDE_DIR}/inviwo/core/properties/propertyfactory.h
    ${IVW_INCLUDE_DIR}/inviwo/core/properties/propertyowner.h
    ${IVW_INCLUDE_DIR}/inviwo/core/properties/propertysemantics.h
    ${IVW_INCLUDE_DIR}/inviwo/core/properties/propertywidget.h
    ${IVW_INCLUDE_DIR}/inviwo/core/properties/propertywidgetfactory.h
    ${IVW_INCLUDE_DIR}/inviwo/core/properties/scalarproperties.h
    ${IVW_INCLUDE_DIR}/inviwo/core/properties/templateproperty.h
    ${IVW_INCLUDE_DIR}/inviwo/core/properties/transferfunctionproperty.h
    ${IVW_INCLUDE_DIR}/inviwo/core/properties/stringproperty.h
    ${IVW_INCLUDE_DIR}/inviwo/core/properties/texteditorproperty.h
    ${IVW_INCLUDE_DIR}/inviwo/core/properties/vectorproperties.h
    ${IVW_INCLUDE_DIR}/inviwo/core/properties/linkevaluator.h	
    ${IVW_INCLUDE_DIR}/inviwo/core/io/datareader.h
    ${IVW_INCLUDE_DIR}/inviwo/core/io/datvolumereader.h
    ${IVW_INCLUDE_DIR}/inviwo/core/io/imageloader.h
    ${IVW_INCLUDE_DIR}/inviwo/core/io/ivfbasesettings.h
    ${IVW_INCLUDE_DIR}/inviwo/core/io/ivfreadersettings.h
    ${IVW_INCLUDE_DIR}/inviwo/core/io/ivfwritersettings.h
    ${IVW_INCLUDE_DIR}/inviwo/core/io/ivfvolumereader.h
    ${IVW_INCLUDE_DIR}/inviwo/core/io/rawvolumereader.h
    ${IVW_INCLUDE_DIR}/inviwo/core/io/volumereader.h
    ${IVW_INCLUDE_DIR}/inviwo/core/io/datawriter.h
    ${IVW_INCLUDE_DIR}/inviwo/core/io/datvolumewriter.h	
    ${IVW_INCLUDE_DIR}/inviwo/core/io/ivfvolumewriter.h	
    ${IVW_INCLUDE_DIR}/inviwo/core/io/rawvolumewriter.h
    ${IVW_INCLUDE_DIR}/inviwo/core/io/volumewriter.h 
    ${IVW_INCLUDE_DIR}/inviwo/core/io/serialization/ivwserializable.h
    ${IVW_INCLUDE_DIR}/inviwo/core/io/serialization/ivwserializableinterface.h	
    ${IVW_INCLUDE_DIR}/inviwo/core/io/serialization/ivwserializebase.h	
    ${IVW_INCLUDE_DIR}/inviwo/core/io/serialization/ivwserializer.h
    ${IVW_INCLUDE_DIR}/inviwo/core/io/serialization/ivwdeserializer.h
    ${IVW_INCLUDE_DIR}/inviwo/core/io/serialization/ivwserialization.h
    ${IVW_INCLUDE_DIR}/inviwo/core/io/serialization/ivwserializeconstants.h
    ${IVW_INCLUDE_DIR}/inviwo/core/util/assertion.h
    ${IVW_INCLUDE_DIR}/inviwo/core/util/canvas.h
    ${IVW_INCLUDE_DIR}/inviwo/core/util/callback.h
    ${IVW_INCLUDE_DIR}/inviwo/core/util/commandlineparser.h
    ${IVW_INCLUDE_DIR}/inviwo/core/util/datetime.h
    ${IVW_INCLUDE_DIR}/inviwo/core/util/exception.h
    ${IVW_INCLUDE_DIR}/inviwo/core/util/filedirectory.h
    ${IVW_INCLUDE_DIR}/inviwo/core/util/fileobserver.h
    ${IVW_INCLUDE_DIR}/inviwo/core/util/formatconversion.h
    ${IVW_INCLUDE_DIR}/inviwo/core/util/formats.h
    ${IVW_INCLUDE_DIR}/inviwo/core/util/inviwofactorybase.h
    ${IVW_INCLUDE_DIR}/inviwo/core/util/group.h
    ${IVW_INCLUDE_DIR}/inviwo/core/util/logdistributor.h
    ${IVW_INCLUDE_DIR}/inviwo/core/util/observer.h
    ${IVW_INCLUDE_DIR}/inviwo/core/util/pstdint.h
    ${IVW_INCLUDE_DIR}/inviwo/core/util/resourceinfo.h
    ${IVW_INCLUDE_DIR}/inviwo/core/util/settings.h
    ${IVW_INCLUDE_DIR}/inviwo/core/util/singleton.h
    ${IVW_INCLUDE_DIR}/inviwo/core/util/stringconversion.h
    ${IVW_INCLUDE_DIR}/inviwo/core/util/systeminfo.h
    ${IVW_INCLUDE_DIR}/inviwo/core/util/typetostring.h
    ${IVW_INCLUDE_DIR}/inviwo/core/util/variant.h
    ${IVW_INCLUDE_DIR}/inviwo/core/util/vectoroperations.h
)
ivw_group("Header Files" ${HEADER_FILES})

#--------------------------------------------------------------------
# Add source files
set(SOURCE_FILES
    common/inviwoapplication.cpp
    common/inviwocore.cpp
    common/inviwomodule.cpp
    datastructures/data.cpp
    datastructures/datarepresentation.cpp
    datastructures/geometry/basemeshcreator.cpp
    datastructures/geometry/geometry.cpp
    datastructures/geometry/geometryram.cpp
    datastructures/geometry/geometryrepresentation.cpp
    datastructures/geometry/meshram.cpp
    datastructures/geometry/trianglemeshram.cpp
    datastructures/image/image.cpp
    datastructures/image/imagedisk.cpp
    datastructures/image/imageram.cpp
    datastructures/image/imageramconverter.cpp
    datastructures/image/imagerepresentation.cpp
    datastructures/representationconverter.cpp
    datastructures/representationconverterfactory.cpp
    datastructures/transferfunction.cpp
    datastructures/transferfunctiondatapoint.cpp
    datastructures/volume/volume.cpp
    datastructures/volume/volumedisk.cpp
    datastructures/volume/volumeram.cpp
    datastructures/volume/volumerepresentation.cpp
    datastructures/volume/volumeramconverter.cpp
    datastructures/volume/volumetypeclassification.cpp
    interaction/action.cpp
    interaction/interactionhandler.cpp
    interaction/trackball.cpp
    interaction/trackballaction.cpp
    interaction/events/event.cpp
    interaction/events/eventhandler.cpp
    interaction/events/eventlistener.cpp
    interaction/events/keyboardevent.cpp
    interaction/events/mouseevent.cpp
    interaction/events/timerevent.cpp
    interaction/events/resizeevent.cpp
    network/portconnection.cpp
    network/processorlink.cpp
    network/processornetwork.cpp
    network/processornetworkevaluator.cpp
    metadata/compositemetadata.cpp	
    metadata/metadata.cpp
    metadata/metadatafactory.cpp
    metadata/metadatamap.cpp
    metadata/positionmetadata.cpp
    metadata/processormetadata.cpp
    metadata/processorwidgetmetadata.cpp
    ports/geometryport.cpp
    ports/imageport.cpp
    ports/inport.cpp
    ports/outport.cpp
    ports/port.cpp
    ports/volumeport.cpp
    processors/canvasprocessor.cpp
    processors/processor.cpp
    processors/processorfactory.cpp
    processors/processorwidget.cpp
    processors/processorwidgetfactory.cpp
    processors/datasource/datasourceprocessor.cpp
    processors/datasource/volumeexport.cpp
    processors/datasource/volumesource.cpp
    properties/boolproperty.cpp
    properties/buttonproperty.cpp
    properties/cameraproperty.cpp
    properties/compositeproperty.cpp
    properties/eventproperty.cpp
    properties/fileproperty.cpp
    properties/matrixproperties.cpp
    properties/optionproperties.cpp
    properties/property.cpp
    properties/propertyfactory.cpp
    properties/propertyowner.cpp
    properties/propertywidget.cpp
    properties/propertywidgetfactory.cpp
    properties/scalarproperties.cpp
    properties/stringproperty.cpp
    properties/texteditorproperty.cpp
    properties/transferfunctionproperty.cpp
    properties/vectorproperties.cpp
    properties/linkevaluator.cpp	
    io/datareader.cpp
    io/datvolumereader.cpp
    io/imageloader.cpp
    io/ivfbasesettings.cpp 
    io/ivfreadersettings.cpp 
    io/ivfwritersettings.cpp 
    io/ivfvolumereader.cpp 
    io/rawvolumereader.cpp
    io/volumereader.cpp
    io/datawriter.cpp
    io/datvolumewriter.cpp 
    io/ivfvolumewriter.cpp 
    io/rawvolumewriter.cpp    
    io/volumewriter.cpp
    io/serialization/ivwserializebase.cpp
    io/serialization/ivwserializer.cpp
    io/serialization/ivwdeserializer.cpp
    io/serialization/ivwserializeconstants.cpp
    util/assertion.cpp
    util/canvas.cpp
    util/commandlineparser.cpp
    util/exception.cpp
    util/filedirectory.cpp
    util/fileobserver.cpp
    util/logdistributor.cpp
    util/observer.cpp
    util/settings.cpp
    util/stringconversion.cpp
    util/systeminfo.cpp
    util/variant.cpp
)
ivw_group("Source Files" ${SOURCE_FILES})

#--------------------------------------------------------------------
# Optimize compilation with pre-compilied headers
set(PCH_PATH_FILES
    ${IVW_INCLUDE_DIR}/inviwo/core/common
    ${IVW_INCLUDE_DIR}/inviwo/core/io/serialization
    ${IVW_INCLUDE_DIR}/inviwo/core/metadata
    ${IVW_INCLUDE_DIR}/inviwo/core/ports
    ${IVW_INCLUDE_DIR}/inviwo/core/util
)
ivw_add_pch_path(${PCH_PATH_FILES})

#--------------------------------------------------------------------
# Define standard defintions
ivw_define_standard_definitions(IVW_CORE)

# Special Core Defines
remove_definitions(-DHAVE_CONFIG_H)
# Define Build Type if not empty
if(NOT "${CMAKE_BUILD_TYPE}" STREQUAL "")
    add_definitions(-DCMAKE_BUILD_TYPE="${CMAKE_BUILD_TYPE}")
endif()
add_definitions(-DCMAKE_GENERATOR="${CMAKE_GENERATOR}")

#--------------------------------------------------------------------
# Create library
add_library(inviwo-core ${SOURCE_FILES} ${HEADER_FILES})

#--------------------------------------------------------------------
# Add core folders to includes
ivw_include_directories(${IVW_INCLUDE_DIR})
ivw_include_directories(${IVW_EXTENSIONS_DIR})
ivw_include_directories(${CMAKE_SOURCE_DIR})

# Add core dependencies to this list
ivw_add_dependencies(
    TiCPP
    Sigar
    FreeImage
)

#Optimize compiliation with PCH etc
ivw_compile_optimize()

#--------------------------------------------------------------------
# Make package (for other projects to find)
ivw_make_package(InviwoCore inviwo-core)