if(IVW_QT_APPLICATION AND NOT IVW_QT_EDITOR)
    set(IVW_QT_EDITOR ON CACHE BOOL "Build Inviwo Qt Editor" FORCE)
    message("IVW_QT_EDITOR was set to build, due to dependency towards IVW_QT_APPLICATION")
endif()

if(IVW_QT_EDITOR AND NOT IVW_QT_WIDGETS)
    set(IVW_QT_WIDGETS ON CACHE BOOL "Build Inviwo Qt Widgets" FORCE)
    message("IVW_QT_WIDGETS was set to build, due to dependency towards IVW_QT_EDITOR")
endif()

if(IVW_QT_EDITOR OR IVW_QT_WIDGETS)
    find_package(Qt QUIET REQUIRED)

    set(QT_DONT_USE_QTCORE FALSE)
    set(QT_DONT_USE_QTGUI FALSE)
    set(QT_USE_QT3SUPPORT FALSE)
    set(QT_USE_QTASSISTANT FALSE)
    set(QT_USE_QTDESIGNER FALSE)
    set(QT_USE_QTMOTIF FALSE)
    set(QT_USE_QTMAIN FALSE)
    set(QT_USE_QTNETWORK FALSE)
    set(QT_USE_QTNSPLUGIN FALSE)
    set(QT_USE_QTOPENGL TRUE)
    set(QT_USE_QTSQL FALSE)
    set(QT_USE_QTXML FALSE)
    set(QT_USE_QTSVG FALSE)
    set(QT_USE_QTTEST FALSE)
    set(QT_USE_QTUITOOLS FALSE)
    set(QT_USE_QTDBUS FALSE)
    set(QT_USE_QTSCRIPT FALSE)
    set(QT_USE_QTASSISTANTCLIENT FALSE)
    set(QT_USE_QTHELP FALSE)
    set(QT_USE_QTWEBKIT FALSE)
    set(QT_USE_QTXMLPATTERNS FALSE)
    set(QT_USE_PHONON FALSE)
endif()

if(IVW_QT_WIDGETS)
    add_subdirectory(widgets)
endif()

if(IVW_QT_EDITOR)
    add_subdirectory(editor)
endif()